# ultraforce-desktop

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  package.json  release-please-config.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
brand/: brandkit.html
branding/: LOGO-BRIEF.md
crates/apex-lang/: Cargo.toml
crates/apex-lang/src/: acquire.rs  candidate.rs  complete.rs  cst.rs  cst_context.rs  cst_scope.rs  db.rs  format.rs  lexer.rs  lib.rs  parser.rs  resolve.rs  snapshot.rs  soql_region.rs  store.rs  symbols.rs
crates/apex-lang/src/ast/: complete.rs  context.rs  diagnostics.rs  engine.rs  infer.rs  lexer.rs  mod.rs  parser.rs  scope.rs  signature.rs  tree.rs  types.rs
crates/apex-lang/tests/: e2e.rs
crates/apex-lang/tests/fixtures/: apexclass_symboltable.json  completions_apex.json
crates/features/: Cargo.toml
crates/features/src/: anon_apex.rs  apex_complete.rs  apex_complete_tests.rs  api_version.rs  aptabase.rs  debug_config.rs  debug_log.rs  debug_traces.rs  field_deps.rs  http_timeout.rs  index.rs  lib.rs  query_plan.rs  rest_dml.rs  soql.rs  soql_children.rs  soql_labels.rs  telemetry_config.rs
crates/features/tests/: anon_apex_e2e.rs  debug_config_e2e.rs  e2e.rs  real_org_e2e.rs  soql_e2e.rs
crates/features/tests/fixtures/: query_accounts.json
crates/log-parser/: Cargo.toml
crates/log-parser/src/: debug_session.rs  entry.rs  event.rs  exceptions.rs  header.rs  lib.rs  limits.rs  parse.rs  profile.rs  source.rs  statements.rs  tree.rs
crates/log-parser/tests/: golden.rs
crates/sf-core/: Cargo.toml
crates/sf-core/src/: error.rs  invoker.rs  json.rs  lib.rs  models.rs  org.rs  runner.rs  version.rs
crates/sf-schema/: Cargo.toml
crates/sf-schema/src/: deps.rs  lib.rs  model.rs  puller.rs  query.rs  sqlite.rs  store.rs
crates/sf-schema/tests/: e2e.rs
crates/sf-schema/tests/fixtures/: describe_account.json
crates/soql-lang/: Cargo.toml
crates/soql-lang/src/: complete.rs  diagnostics.rs  format.rs  lexer.rs  lib.rs  parse.rs  spans.rs
crates/soql-lang/tests/: e2e.rs
crates/uf-ost/: Cargo.toml
crates/uf-ost/src/: aptabase.rs  detail.rs  index_cmd.rs  lock.rs  main.rs  query.rs  root.rs  server.rs  soql.rs  status_cmd.rs  telemetry.rs
crates/uf-ost/src/live/: apex.rs  dml.rs  mod.rs  query.rs  rest.rs
crates/uf-ost/tests/: mcp_contract.rs
desktop/: .fallowrc.jsonc  .gitignore  .oxlintrc.json  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
desktop/e2e/: apex-completion-snippets.spec.ts  apex-debug.spec.ts  apex-diff.spec.ts  apex-history.spec.ts  apex-insights.spec.ts  apex-loglist.spec.ts  apex-run-confirm.spec.ts  apex-source.spec.ts  apex-tree.spec.ts  cli-guidance.spec.ts  completion.spec.ts  connect-org.spec.ts  dev-scenarios.spec.ts  fixtures.ts  focus-search.spec.ts  log-debugger.spec.ts  log-source-mapping.spec.ts  log-views.spec.ts  monaco.ts  page-switch-perf.spec.ts  perf-harness.ts  screenshots.spec.ts  settings.spec.ts  soql-subquery.spec.ts  timeline.spec.ts  ultraforce.spec.ts
desktop/src/: App.tsx  AstryxSpikeProvider.tsx  AstryxThemeProvider.tsx  apexHistory.ts  apexSettings.ts  clipboard.ts  dateInput.test.ts  dateInput.ts  debug-presets.ts  editor-themes.ts  errorFormat.test.ts  errorFormat.ts  focusSearch.ts  history.test.ts  history.ts  indexSettings.ts  main.tsx  metrics.test.ts  metrics.ts  monaco-apex.ts  monaco-markers.ts  monaco-opts.ts  monaco-retrigger.ts  monaco-soql.ts  motion.css  openTab.ts  org.tsx  orgConfig.test.ts  orgConfig.ts  platform.ts  store.ts  styles.css  theme.tsx  traceTime.test.ts  traceTime.ts  types.ts  updater.ts  useDebugConfig.ts  useLoggingConfig.ts  useSchemaPreheat.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: apex_exec.rs  completion.rs  debug_cfg.rs  dto.rs  error.rs  index_coordinator.rs  indexing.rs  lib.rs  main.rs  org_config.rs  schema_browse.rs  setup.rs  sf_cli.rs  soql_exec.rs  state.rs  telemetry.rs  telemetry_cfg.rs
desktop/src-tauri/src/dto/: completion.rs  config.rs  contract.rs  log.rs  misc.rs  mod.rs  schema.rs  soql.rs
desktop/src/assets/: logo-loading.json
desktop/src/components/: ApexHistoryDrawer.tsx  CliGuidance.tsx  CommandPalette.tsx  ConnectOrg.tsx  DateTimePicker.tsx  DebugLevelsTable.tsx  EntityCombobox.tsx  Explorer.test.tsx  Explorer.tsx  HistoryDrawer.tsx  IndexProgress.tsx  LogDebugger.tsx  LogView.tsx  LoggingConfigDialog.tsx  LoggingConfigPanel.tsx  LogoLoader.tsx  OrgBadge.tsx  OrgSelector.tsx  OrgSwitcherModal.tsx  QueryPlanView.tsx  RecordTree.tsx  ResultTable.tsx  RunButton.tsx  SchemaRefresh.test.tsx  SchemaRefresh.tsx  SettingsPage.tsx  SetupPage.tsx  SfErrorDetail.tsx  SoqlEditor.tsx  SourceDialog.tsx  SyncToast.tsx  TraceFlagsTable.tsx  TreeNode.tsx  WorkspaceSettings.tsx  confirm.tsx  csv.test.ts  csv.ts  export.test.ts  export.ts  indexBar.test.ts  (+6 more)
desktop/src/editor/: activeOrg.ts  apexSuggest.test.ts  apexSuggest.ts  base.ts  monaco-apex.ts  monaco-contextmenu.ts  monaco-keybindings.test.ts  monaco-keybindings.ts  monaco-markers.ts  monaco-retrigger.ts  monaco-reveal.ts  monaco-soql.ts  soqlSubqueryHighlight.test.ts  soqlSubqueryHighlight.ts
desktop/src/fs/: migrate.test.ts  migrate.ts  paths.test.ts  paths.ts  save.test.ts  save.ts  search.test.ts  search.ts  tree.test.ts  tree.ts  workspace.test.ts  workspace.ts
desktop/src/hooks/: useArrivalCue.test.ts  useArrivalCue.ts  useOrgSwitchCue.test.ts  useOrgSwitchCue.ts  useOverlayExit.test.ts  useOverlayExit.ts  useReducedMotion.ts
desktop/src/ipc/: apex.ts  config.ts  logs.ts  org.ts  schema.ts  (+1 more)
docs/: RELEASE.md  WORKFLOW.md  apex-log-analyser.md  apex-log-charts.md  apex-log-insights.md  astryx-spike.md
npm/: package.json  postinstall.js  run.js
scripts/: check-arch.sh
skills/ost/: SKILL.md
(+212 files in other folders)
