[package]
name = "features"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
sf-core = { path = "../sf-core" }
log-parser = { path = "../log-parser" }
serde = { workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }

[dev-dependencies]
sf-core = { path = "../sf-core", features = ["test-util"] }
tokio = { workspace = true }
