[package]
name = "features"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
apex-lang = { path = "../apex-lang" }
sf-core = { path = "../sf-core" }
sf-schema = { path = "../sf-schema" }
log-parser = { path = "../log-parser" }
serde = { workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }

[dev-dependencies]
sf-core = { path = "../sf-core", features = ["test-util"] }
tokio = { workspace = true }
