[package]
name = "sf-schema"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
sf-core = { path = "../sf-core" }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
sf-core = { path = "../sf-core", features = ["test-util"] }
