[package]
name = "uf-ost"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "uf-ost"
path = "src/main.rs"

[dependencies]
apex-lang = { path = "../apex-lang" }
sf-schema = { path = "../sf-schema" }
soql-lang = { path = "../soql-lang" }
sf-core = { path = "../sf-core" }
features = { path = "../features" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
rusqlite = { workspace = true }
# Remote telemetry POST (opt-in Aptabase sink). Best-effort, fire-and-forget.
reqwest = { workspace = true }
# Pinned exact: rmcp is pre-stable-API and churns on minor bumps.
rmcp = { version = "=2.1.0", features = ["server", "transport-io", "macros"] }

[dev-dependencies]
rmcp = { version = "=2.1.0", features = ["client", "server", "transport-io", "transport-child-process", "macros"] }
sf-core = { path = "../sf-core", features = ["test-util"] }
serde_json = { workspace = true }
