[package]
name = "sf-toolkit-desktop"
version = "0.1.0"
description = "SF Toolkit desktop"
edition = "2021"

[lib]
name = "sf_toolkit_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
apex-lang = { path = "../../crates/apex-lang" }
features = { path = "../../crates/features" }
log-parser = { path = "../../crates/log-parser" }
soql-lang = { path = "../../crates/soql-lang" }
sf-schema = { path = "../../crates/sf-schema" }
sf-core = { path = "../../crates/sf-core" }
