[package]
name = "ultraforce-desktop"
version = "0.3.3"
description = "Ultraforce — local-first Salesforce developer toolkit (SOQL, anonymous Apex, debug logs)"
edition = "2021"

[lib]
name = "ultraforce_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
apex-lang = { path = "../../crates/apex-lang" }
features = { path = "../../crates/features" }
log-parser = { path = "../../crates/log-parser" }
soql-lang = { path = "../../crates/soql-lang" }
sf-schema = { path = "../../crates/sf-schema" }
sf-core = { path = "../../crates/sf-core" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dirs = "5"
